# opengametools

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: main.yml
apps/: vox2fbx.cpp  vox2obj.cpp  voxmerge.cpp  voxseparate.cpp
demo/: demo_vox.cpp  load_vox.cpp  tests.cpp  tests.h
demo/vox/: .gitignore  LICENSE.MD  chr_knight.vox  chr_old.vox  chr_rain.vox  doom.vox  test_groups.vox  test_meta_chunk.vox  test_multiple_model_scene.vox
src/: ogt_vox.h  ogt_vox_loader.h  ogt_voxel_meshify.h
